--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,16 @@
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
+    /* background-color: #ffb6c1; */
     text-align: center;
     padding: 30px;
 }
 
 h1{
-    color: 
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: #ffb6c1;
+
 }
 
 form div {
@@ -22,4 +26,9 @@ input {
 
 fieldset legend {
     margin-bottom: 20px;
+}
+
+button {
+    padding: 8px 10px;
+    background-color: ;
 }
