--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,63 @@
+:root{
+    --cor-cinza-claro: #f4f4f4;
+    --cor-branca: #fff;
+    --cor-rosa-claro: #ffc0cb;
+    --fonte-grande: impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    --fonte: t;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    /* background-color: #ffb6c1; */
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #002147;
     text-align: center;
-    padding: 30px;
+    padding: 50px;
 }
 
 h1{
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: #ffb6c1;
+    font-size: 3.5em;
+    color: #ffffff;
+    padding-bottom: 40px;
 
 }
 
-form div {
-    margin-bottom: 20px;
-    
+fieldset{
+    background-color: #87cefa;
+    padding: 20px;
+    border-radius: 40px;
+    border: none;
+    display: inline-block;
 }
 
-input {
-    padding: 8px; 
-    width: 40%;
-    margin-right: 5px;
+legend {
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 1.2em;
 }
 
-fieldset legend {
-    margin-bottom: 20px;
+input[type="text"] {
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    width: 200px;
+    background-color: #e0f2ff;
 }
 
 button {
-    padding: 8px 10px;
-    background-color: ;
+    padding: 10px 15px;
+    border-radius: 10px;
+    border: none;
+    background-color: #ffffff;
+    cursor: pointer;
+    font-weight: bold;
+    margin-left: 10px;
+}
+
+button:hover {
+    background-color: #b0c4de;
 }
