--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,24 @@ header h1{
     margin-top: 30px;
 }
 
+fieldset{
+    border: none;
+}
+
+#formAdicionarTarefa {
+    background-color: #66b2ff;
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    width: 400px;
+    margin: 0 auto;
+}
+
+legend { 
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
