--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,28 @@ legend {
     font-weight: bold;
     margin-bottom: 15px;
 }
+
+input[type="text"] {
+    padding: 10px;
+    width: 90%;
+    border: none;
+    border-radius: 20px;
+    margin-bottom: 10px;
+    font-size: 1rem;
+}
+
+#formAdicionarTarefa button {
+    padding: 10px 15px;
+    border: none;
+    border-radius: 20px;
+    background-color: white;
+    color: black;
+    font-weight: bold;
+    cursor: pointer;
+    width: 50%;
+}
+
+#formAdicionarTarefa button:hover {
+    background-color: lightgray;
+}
+
